# mvp-builder

./: .gitignore  .mcp.json  .worktreeinclude  CHANGELOG.md  CLAUDE.md  LICENSE  MEMORY.md  README.md  package-lock.json  package.json  pyproject.toml  settings.json  test.md  vitest.config.ts
.claude/: prd.md  settings.json  settings.local.json
.claude/agents/: design-generate.md  feature-fix.md  feature-setup.md  feature-tdd.md  tdd-dev.md  user-registration-review.md
.claude/commands/: create_agent.md  create_command.md  git.md  prd.md  self_improve.md
.claude/hooks/: session-start.sh
.claude/rules/: backend.md  docker.md  frontend.md  git.md
.claude/scripts/: create-new-feature.sh
.claude/skills/: skills-rules.json
.claude/templates/: agent-template.md  checklist-template.md  command-template.md  design-setup-template.md  features-template.md  feedback-template.md  git-template.md  plan-template.md  prompt-template.md  readme-template.md  resolutions-template.md  spec-template.md  tasks-template.md  ui-template.md  ux-template.md
.claude/tools/: context7.md  git.md  git.xml  prd.md  sequential-thinking.md
ai-docs/: DESIGN_SYSTEM.md  FEATURES.md  PRD.md
ai-docs/references/: CONTENT-LIBRARY.md  DESIGN-SYSTEM.md
backend/: .env.example  jest.config.cjs  jest.config.js  package-lock.json  package.json  tsconfig.json
backend/prisma/: schema.prisma
frontend/: .env.example  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts  vitest.config.ts
scripts/: install.cmd  install.ps1   install.sh
(+211 files in other folders)
