[project]
name = "mvpbuilder-cli"
version = "0.0.1"
description = "MVP Builder CLI for claude spec driven development"
requires-python = ">=3.11"
dependencies = [
    "typer",
    "rich",
    "httpx[socks]",
    "platformdirs",
    "readchar",
    "truststore>=0.10.4",
]

[project.scripts]
mvpbuilder = "mvpbuilder_cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mvpbuilder_cli"]